--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,4 +39,4 @@ jobs:
         # uses: snyk/actions@7fad562681122205233d1242c3bb39598c5393da
         uses: snyk/actions@0.3.0
         env:
-          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN_ }}
+          SNYK_TOKEN: be535740-a8b4-432f-b350-e23e536a1c19
