--- a/.github/workflows/snyk-infrastructure-analysis.yml
+++ b/.github/workflows/snyk-infrastructure-analysis.yml
@@ -14,7 +14,7 @@ on:
     # The branches below must be a subset of the branches above
     branches: [ master ]
   schedule:
-    - cron: '*/5 * * * *'
+    - cron: '0 0 1 * *'
 
 jobs:
   snyk:
